; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-em.c_em_gio_direction_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-em.c_em_gio_direction_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }

@GIO_E1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32, i32)* @em_gio_direction_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @em_gio_direction_output(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @em_gio_set(%struct.gpio_chip* %7, i32 %8, i32 %9)
  %11 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %12 = call i32 @gpio_to_priv(%struct.gpio_chip* %11)
  %13 = load i32, i32* @GIO_E1, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @BIT(i32 %14)
  %16 = call i32 @em_gio_write(i32 %12, i32 %13, i32 %15)
  ret i32 0
}

declare dso_local i32 @em_gio_set(%struct.gpio_chip*, i32, i32) #1

declare dso_local i32 @em_gio_write(i32, i32, i32) #1

declare dso_local i32 @gpio_to_priv(%struct.gpio_chip*) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
